--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,14 @@
       <version>16</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.18</version>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
